.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: progapview-service
spec:
  selector:
    app: progapview-pod
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80 #porta interna
      targetPort: 80 #porta a aplicação
