.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: progapview-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-alias: progap.policiacivil.go.gov.br
spec:
  tls:
    - hosts:
        - progap-homo.policiacivil.go.gov.br
        - progap.policiacivil.go.gov.br
      secretName: certificado-pc
  rules:
    - host: progap-homo.policiacivil.go.gov.br
      http:
        paths:
          - backend:
              service:
                name: progapview-service
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
